tests/failure/missing/semicolon_5.expected
syntax error: expected ";" before "END_PRODUCTIONS": line 9, column 1 to line 9, column 15:
END_PRODUCTIONS;
^^^^^^^^^^^^^^^

